@@ -1,5 +1,5 @@
 <?php
-// $Id: views_handler_argument_term_node_tid.inc,v 1.1.6.2 2009-12-24 00:37:01 merlinofchaos Exp $
+// $Id: views_handler_argument_term_node_tid.inc,v 1.1.6.3 2010-08-16 20:53:39 dereine Exp $
 /**
  * Allow taxonomy term ID(s) as argument
  */
@@ -47,7 +47,7 @@ class views_handler_argument_term_node_tid extends views_handler_argument_many_t
 
   function summary_argument($data) {
     if (!empty($this->options['use_synonym_for_summary_links'])) {
-      $synonym = db_result(db_query_range("SELECT name FROM {term_synonym} WHERE tid = %d", $data->{$this->base_alias}, 0, 1));
+      $synonym = db_query_range("SELECT name FROM {taxonomy_term_synonym} WHERE tid = %d", $data->{$this->base_alias}, 0, 1)->fetchField();
       if (!empty($synonym)) {
         return $synonym;
       }
