@@ -334,6 +334,7 @@ Views 3.x-7.x-dev
     o #884000 by bojanz: Fill node.moderate column.
     o #883990 by dereine: Rename history_user to history in the popular default view.
     o #884512 by bojanz, dereine: Fix notice in views_handler_argument_string
+    o #722454 by DeFr, dereine: Fix taxonomy integration
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
